ADDED:

- AQUABUD INSIGNIA

- UPDATED AIRBUD, INTEL, MEDICAL PATCH DISPLAY NAMES