@@ -3,3 +3,7 @@ ADDED:
 - AQUABUD INSIGNIA
 
 - UPDATED AIRBUD, INTEL, MEDICAL PATCH DISPLAY NAMES
+
+- THUNDERSPEAR INSIGNIA
+
+- MAP MARKERS FOR EXISTING INSIGNIA
